--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ input{
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 1.1rem;
 }
 .listContainer{
     width: 100%;
@@ -184,14 +185,48 @@ i{
     display: none;
 }
 p{
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
 
 .fa-edit{
     width: 100%;
 }
 
-@media (max-width: 500px) {
+@media (min-width: 501px) and (max-width: 1200px){
+    main{
+        max-width: 80%;
+    }
+    input{
+        height: 40px;
+    }
+    #addBtn, .saveTasks{
+        height: 35px;
+    }
+}
+
+@media (min-width: 300px) and (max-width: 450px){
+    main{
+        max-width: 100%;
+        min-width: 90%;
+    }
+    .saveTasks{
+        min-height: 40px;
+        max-height: 45px;
+    }
+}
+
+@media (max-width: 300px){
+    #addInput{
+        max-width: 70%;
+    }
+    #addBtn, .saveTasks{
+        max-width: 70%;
+        min-width: 65%;
+        max-height: 45px;
+        min-height: 40px;
+    }
+}
+@media (max-width: 500px){
     main{
         max-width: 80%;
     }
